--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/wizink/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/wizink/BUILD
@@ -19,6 +19,7 @@ junit_test(
         "//src/integration/amount",
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/credentials:service",
+        "//src/integration/enums",
         "//src/integration/identity_data",
         "//src/integration/lib",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/client",
@@ -27,6 +28,7 @@ junit_test(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/url",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/configuration",
+        "//src/integration/models",
         "//src/libraries/serialization",
         "//third_party:com_fasterxml_jackson_core_jackson_core",
         "//third_party:com_sun_jersey_jersey_core",
