--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/banks/ing/v195/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/banks/ing/v195/BUILD
@@ -9,6 +9,7 @@ java_library(
         "//src/integration/amount",
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/credentials:service",
+        "//src/integration/enums",
         "//src/integration/identity_data",
         "//src/integration/lib",
         "//src/integration/lib:annotations",
