--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/it/openbanking/unicredit/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/it/openbanking/unicredit/BUILD
@@ -2,30 +2,31 @@ load("//tools/bzl:junit.bzl", "junit_test")
 
 junit_test(
     name = "unicredit",
-    srcs = glob(["*.java"]),
-    data = ["//:agent_test_data"],
+    srcs = glob(
+        ["**/*.java"],
+        exclude = ["agent/**/*.java"],
+    ),
+    data = [
+        "//src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/it/openbanking/unicredit/payment/resources",
+    ],
     tags = [
-        "external",
-        "manual",
     ],
     visibility = ["//visibility:public"],
     deps = [
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/it/openbanking/unicredit",
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/unicredit",
-        "//src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/unicredit",
-        "//src/integration/amount",
-        "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
-        "//src/integration/credentials/src/main/java/se/tink/libraries/credentials/service",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/exceptions",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/componentproviders",
-        "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework",
-        "//src/integration/payment:enums",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/authentication/progressive",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/payment",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/core/account",
         "//src/integration/payment:rpc",
-        "//src/integration/transfer:enums",
-        "//src/integration/transfer:rpc",
+        "//src/libraries/agent-storage",
+        "//src/libraries/serialization",
+        "//third_party:com_github_rholder_guava_retrying",
         "//third_party:org_assertj_assertj_core",
         "//third_party:org_iban4j_iban4j",
         "//third_party:org_mockito_mockito_core",
-        "@tink_backend//src/libraries/account_identifier",
-        "@tink_backend//src/libraries/payments_common/src/java/se/tink/libraries/payments/common/model:payments_common_model",
+        "//third_party:pl_pragmatists_junitparams",
     ],
 )
